feat: Add modal for displaying budgeting rules and category definitions

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,31 +42,37 @@ input, button {
 
 input {
     width: 100%;
-    color: skyblue;
+    color: #08f7fe;
     background: #35393f;
     border: 2px solid lightsteelblue;
     border-radius: 12px;
 }
 
 button {
+    background-color: #333; /* Dark background */
+    color: #fff; /* White text */
+    border: 3px solid #08f7fe;  /* Neon blue border */
+    box-shadow: 0 0 10px #08f7fe, 0 0 20px #08f7fe, 0 0 30px #08f7fe, 0 0 40px #08f7fe; /* Neon blue glow */
+    padding: 10px 20px;
+    margin: 20px 0;
+    font-size: 16px;
     cursor: pointer;
-    background-color: #7289da;
-    color: #ffffff;
-    border: none;
-    margin-top: 20px;
-    border-radius: 15px;
+    transition: all 0.3s ease;
 }
 
 button:hover {
-    background-color: #677bc4;
+    background-color: #08f7fe; /* Neon blue background on hover */
+    color: #333; /* Dark text on hover */
+    box-shadow: 0 0 5px #ff2c55, 0 0 10px #ff2c55, 0 0 15px #ff2c55, 0 0 20px #ff2c55; /* Neon red glow on hover */
 }
+
 
 #results {
     position: sticky;
     bottom: 0;
     width: 100%;
     background-color: #333;
-    color: #00e813;
+    color: #08f7fe;
     padding: 10px;
     text-align: center;
     font-size: 20px;
@@ -86,4 +92,59 @@ pre {
     }
 }
 
+/* info button */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #333; /* Dark background */
+    color: #fff; /* White text */
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border: 3px solid #08f7fe;  /* Neon blue border */
+    box-shadow: 0 0 10px #08f7fe, 0 0 20px #08f7fe, 0 0 30px #08f7fe, 0 0 40px #08f7fe; /* Neon blue glow */
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    color: #08f7fe; /* Neon blue text */
+    text-shadow: 0 0 5px #08f7fe, 0 0 10px #08f7fe, 0 0 15px #08f7fe, 0 0 20px #08f7fe; /* Neon blue glow */
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: #ff2c55; /* Neon red text on hover/focus */
+    text-shadow: 0 0 5px #ff2c55, 0 0 10px #ff2c55, 0 0 15px #ff2c55, 0 0 20px #ff2c55; /* Neon red glow on hover/focus */
+    cursor: pointer;
+}
+
+/* end of info */
+
+
+/* income and bills title */
+#income, #bills {
+    
+    border: 3px solid #ffe48d;  /* Neon red border */
+    box-shadow: 0 0 5px #f9f9f9; /* Reduced neon red glow */
+}
+
+#income:focus, #bills:focus {
+    outline: none;
+    box-shadow: 0 0 5px #08f7fe; /* Reduced neon blue glow on focus */
+}
 
