--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -57,7 +57,7 @@ button {
     0 0 40px #08f7fe; /* Neon blue glow */
   padding: 10px 20px;
   margin: 20px 0;
-  font-size: 16px;
+  font-size: 2em;
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -86,7 +86,6 @@ pre {
 }
 @media print {
   html * {
-    display: none;
     background-color: white;
     color: black;
   }
