--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -100,6 +100,9 @@ pre {
     display: block;
     background-color: white;
     color: black;
+    width: 100%;
+    font-size: 2em;
+    padding: 1em;
   }
 }
 
